# Philosopher ?
### Build: ?

### Added
### Changed
### Fixed


# Philosopher 20190206
### Build: 201902061307

### Added
- Started adding unit tests to modules.

### Fixed
- Fixed a bug with a missing database after fetching from UniProt.

# Philosopher 20190204
### Build: 201902041330

### Fixed
- Fixed an error when trying to execute the prophets after the database command.
- Fixed an error when trying to execute the filter command (missing database).

# Philosopher 20190116
### Build: 201901161554

### Added
- All different reports now show the protein identifications.
- All reports now include information about assigned and observed modifications.
- New filter option called cappedsequential with threshold control on the second step filtering.

### Changed
- Report file is now called protein.tsv.
- Columns names were fixed to become synchronized.
- Updated mzML mapping function.
- Major improvements with the processing speed.

### Fixed
- Minor bug fixes.

# Philosopher 20181128
### Build: 201811281548

### Fixed
- Fixed an issue with the MSstats report.
- Minor bug fixes.

# Philosopher 20181119
### Build: 201811191306

### Added
- MSstats and MSstatsTMT compatibel reports added to the report command.
- Reprint / CRApome compatible report added to the abacus command.


# Philosopher 20181116
### Build: 201811161414

### Added
- Combined peptide report added to Abacus.

### Changed
- The Abacus command now supports both peptide and protein combined reports by using the flags --peptide and --protein.
- Abacus combined protein report now is called combined_protein.tsv.
- Peptide reports now have mapped protein information.
- Dependency libraries were updated.

### Fixed
- A problem was not allowing recently downloaded databases to be processed.
- Minor bugs and issues.

# Philosopher 20181011
### Build: 201810111533

### Added
- Support for ENSEMBL databases.

### Fixed
- Minor bug fixes.

# Philosopher 20180924
### Build: 201809241411

### Added